--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
         <meta charset="UTF-8"> 
-        <title>Page Title</title> 
+        <title>DART 206 Website</title> 
         <link rel="stylesheet" href="styles.css"> 
     </head> 
-    <body> 
+    <body>
+        <h1>Updating in progress</h1>
         <!-- Add content here --> 
     </body>
 </html>
