--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head> 
     <body>
         <h1>Updating in progress</h1>
+        &nbsp;
+        <h1>Testing Git</h1>
         <!-- Add content here --> 
     </body>
 </html>
