--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Updating in progress</h1>
         &nbsp;
         <h1>Testing Git</h1>
-        <script type="application/processing"></script>
+        <script type="application/processing">
         //I kept the x and y variables for flight, and added a and b variables for the laser. 
 int x = 150;
 int y = 300;
