--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
         &nbsp;
         <h1>Testing Git</h1>
         <script type="application/processing">
-            int a = 5;
+            
 
             void setup(){
             size(200,200);
             }
             void draw(){
             background(50);
-            circle(a, 50, 50);
-            a++;
+            circle(50, 50, 50);
             }
 
         </script>
