--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             }
 
         </script>
-        <p>Testing Code</p>
+        <canvas></canvas>
+        <p>Testing Codes</p>
     </body>
 </html>
