--- a/index.html
+++ b/index.html
@@ -7,25 +7,11 @@
         <meta charset="UTF-8"> 
         <title>DART 206 Website</title> 
         <link rel="stylesheet" href="styles.css"> 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
     </head> 
     <body>
         <h1>Updating in progress</h1>
         &nbsp;
         <h1>Testing Git</h1>
-        <script type="application/processing">
-            
-
-            void setup(){
-            size(200,200);
-            }
-            void draw(){
-            background(50);
-            circle(50, 50, 50);
-            }
-
-        </script>
-        <canvas></canvas>
-        <p>Testing Codes</p>
+        <script src="Art.js"></script>
     </body>
 </html>
