--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Updating in progress</h1>
         &nbsp;
         <h1>Testing Git</h1>
-        <a href="Gamepage.html">Game</a>
+        <a href="Gamepage.html"><h2>Game</h2></a>
         <script src="Art.js"></script>
     </body>
 </html>
