--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="styles.css"> 
     </head> 
     <body>
-        <h1>Updating in progress</h1>
-        &nbsp;
-        <h1>Testing Git</h1>
+        <h1>Evan Harbaugh</h1>
+        <h2>HTML Roadtest</h2>
+        <script type="text/javascript" src="processing.js"></script>
+        <canvas data-processing-sources="HTML_Roadtest.pde"></canvas>
         <a href="Gamepage.html"><h2>Game</h2></a>
-        <script src="Art.js"></script>
     </body>
 </html>
