--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Evan Harbaugh</h1>
         <h2>HTML Roadtest</h2>
         <script type="text/javascript" src="processing.js"></script>
-        <canvas data-processing-sources="HTML_Roadtest.pde"></canvas>
+        <canvas data-processing-sources="htmlRoadtest.pde"></canvas>
         <a href="Gamepage.html"><h2>Game</h2></a>
     </body>
 </html>
