--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html> 
 <html> 
     <head> 
+        <script type="text/javascript" src="processing.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
         <meta charset="UTF-8"> 
         <title>DART 206 Website</title> 
         <link rel="stylesheet" href="styles.css"> 
-    </head> 
     <body>
         <h1>Evan Harbaugh</h1>
         <h2>HTML Roadtest</h2>
@@ -15,4 +15,5 @@
         <canvas data-processing-sources="htmlRoadtest.pde"></canvas>
         <a href="Gamepage.html"><h2>Game</h2></a>
     </body>
+</head> 
 </html>
