--- a/Gamepage.html
+++ b/Gamepage.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="processing.js"></script>
 <body>
 <canvas data-processing-sources="myGame.pde"></canvas>
+<canvas data-processing-sources="htmlRoadtest.pde"></canvas>
 </body>
 </head>
 </html>
