--- a/Gamepage.html
+++ b/Gamepage.html
@@ -1,10 +1,9 @@
-<!DOCTYPE= html>
+<!DOCTYPE html>
 <html>
 <head>
 <script type="text/javascript" src="processing.js"></script>
 <body>
 <canvas data-processing-sources="myGame.pde"></canvas>
-<canvas data-processing-sources="htmlRoadtest.pde"></canvas>
 </body>
 </head>
 </html>
