--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <body>
         <h1>Evan Harbaugh</h1>
         <h2>HTML Roadtest</h2>
+        <p>I wanted to make some new content to put here, so in the theme of a Roadtest, 
+            I coded a short driving game/ drawing tool in an application called Processing.</p>
+        <p>Use the arrow keys to drive, and the shift key to stop the car.</p>
         <canvas data-processing-sources="htmlRoadtest.pde"></canvas>
+        <p>I enjoy coding, and wanted to utilize this excercise to practice running scripts 
+            within HTML. For that reason, I also included a two player game I made in the past.
+        </p>
         <a href="Gamepage.html"><h2>Game</h2></a>
     </body>
 </head> 
