--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <h1>Evan Harbaugh</h1>
         <h2>HTML Roadtest</h2>
-        <p>I wanted to make some new content to put here, so in the theme of a Roadtest, 
-            I coded a short driving game/ drawing tool in an application called Processing.</p>
-        <p>Use the arrow keys to drive, and the shift key to stop the car.</p>
+        <h3>I wanted to make some new content to put here, so in the theme of a Roadtest, 
+            I coded a short driving game/ drawing tool in an application called Processing.</h3>
+        <h4>Use the arrow keys to drive, and the shift key to stop the car.</h4>
         <canvas data-processing-sources="htmlRoadtest.pde"></canvas>
         <p>I enjoy coding, and wanted to utilize this excercise to practice running scripts 
             within HTML. For that reason, I also included a two player game I made in the past.
