--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="styles.css"> 
     <body>
         <h1>Evan Harbaugh</h1> 
-        <h2>HTML Roadtest</h2><wbr/><div class="red">0</div><wbr/><div class="yellow">0</div><wbr/><div class="green">0</div>
+        <h2>HTML Roadtest</h2><div class="red">|0|</div><div class="yellow">|0|</div><div class="green">|0|</div>
         <h3>I wanted to make some new content to put here, so in the theme of a Roadtest, 
             I coded a short driving game/ drawing tool in an application called Processing.</h3>
         <h4>Use the arrow keys to drive, and the shift key to stop the car.</h4>
