--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             I coded a short driving game/ drawing tool in an application called Processing.</h3>
         <h4>Use the arrow keys to drive, and the shift key to stop the car.</h4>
         <canvas data-processing-sources="htmlRoadtest.pde"></canvas>
+        <canvas data-processing-sources="myGame.pde"></canvas>
     </body>
 </head> 
 </html>
