--- a/Gamepage.html
+++ b/Gamepage.html
@@ -3,6 +3,7 @@
 <head>
 <script type="text/javascript" src="processing.js"></script>
 <body>
+<h1>Testing</h1>
 <canvas data-processing-sources="myGame.pde"></canvas>
 </body>
 </head>
