--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <h1>Evan Harbaugh</h1> 
         <h2>HTML Roadtest</h2><div class="red">|0|</div><div class="yellow">|0|</div><div class="green">|0|</div>
+        <a href="Gamepage.html">Games</a>
         <div class="car">🚗</div>
         <h3>I wanted to make some new content to put here, so in the theme of a Roadtest, 
             I coded a short driving game/ drawing tool in an application called Processing.</h3>
