--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
         <meta charset="UTF-8"> 
-        <title>DART 206 Website</title> 
+        <title>Evan Harbaugh</title> 
         <link rel="stylesheet" href="styles.css"> 
     <body>
         <h1>Evan Harbaugh</h1> 
