--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
-        <meta charset="UTF-8"> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Evan Harbaugh</title> 
         <link rel="stylesheet" href="styles.css"> 
     <body>
-        <h1>Evan Harbaugh</h1> 
+        <div class="title"><h1>Evan Harbaugh</h1></div>
         <h2>HTML Roadtest</h2><div class="red">|0|</div><div class="yellow">|0|</div><div class="green">|0|</div>
         <a href="Gamepage.html">Games</a>
         <div class="car">🚗</div>
