--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
         <title>Evan Harbaugh</title> 
         <link rel="stylesheet" href="styles.css"> 
     <body>
-        <div class="title"><h1>Evan Harbaugh</h1></div>
-        <a href="Gamepage.html">Games</a>
-    </body>
+        <a class="title" href="index.html">Evan Harbaugh</a>
+	<div class="menu">
+        <a class="menu" href="Gamepage.html">Games</a>
+	<a class="menu" href="Blog.html">Blog</a>
+	<a class="menu" href="Portfolio.html">Portfolio</a>
+	<a class="menu" href="About.html">About</a>
+
+<! End Top Menu>
+
+	
+<! End Body>
+
+	<footer class="footer">&copy; 2022 Evan Harbaugh
+<! End Footer>
+	</body>
 </head> 
 </html>
