--- a/Gamepage.html
+++ b/Gamepage.html
@@ -10,6 +10,7 @@
         <title>Evan Harbaugh</title> 
         <link rel="stylesheet" href="styles.css"> 
         <script type="text/javascript" src="processing.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <body>
         <a class="title" href="index.html">Evan Harbaugh</a>
 	    <div class="menu">
