--- a/Blog.html
+++ b/Blog.html
@@ -8,7 +8,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Evan Harbaugh</title> 
-        <link rel="stylesheet" href="styles.css"> 
+        <link rel="stylesheet" href="styles.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <body>
         <a class="title" href="index.html">Evan Harbaugh</a>
 	    <div class="menu">
